prevent buttons from breaking mobile layouts: allow them to wrap

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -10,6 +10,7 @@ a:hover {
   border: 2px solid $link-color;
   border-radius: 0;
   text-transform: uppercase;
+  white-space: normal;
 }
 
 .btn-sm {
